smaller content fixes

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="LOFDS vereint Organisation, Kreativität und Schönheit. Es ist ein Team in dem innovative Ideen wachsen können. Unsere Business Center unterstützen sich gegenseitig, Expertise wird geteilt und dem Schaffensgeist sind somit keine Grenzen gesetzt. Ob Eventplanung, Design, Mode oder Musik LOFDS zeichnet sich durch seine Vielfältigkeit aus und wird dadurch einzigartig. Obwohl Ideen meist klein beginnen, kann durch den Zusammenschluss unserer Business Center bereits der Funke zu etwas Großem werden. Spaß, Kreativität und Begeisterung zeichnen unsere Arbeit aus, eben eine lustige Organisation für dolle Sachen."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
