add new business towl service

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="LOFDS vereint Organisation, Kreativität und Schönheit. Es ist ein Team in dem innovative Ideen wachsen können. Unsere Business Center unterstützen sich gegenseitig, Expertise wird geteilt und dem Schaffensgeist sind somit keine Grenzen gesetzt. Ob Eventplanung, Design, Mode oder Musik LOFDS zeichnet sich durch seine Vielfältigkeit aus und wird dadurch einzigartig. Obwohl Ideen meist klein beginnen, kann durch den Zusammenschluss unserer Business Center bereits der Funke zu etwas Großem werden. Spaß, Kreativität und Begeisterung zeichnen unsere Arbeit aus, eben eine lustige Organisation für dolle Sachen."
+      content="L.O.F.D.S. ein Familienunternehmen welches Organisation, Kreativität und Schönheit vereint. In unserem Team können innovative Ideen wachsen und unsere Business Center unterstützen sich gegenseitig, Expertise wird geteilt und dem Schaffensgeist sind keine Grenzen gesetzt. Ob Eventplanung, Design, Mode, Musik oder Equipmentverleih LOFDS zeichnet sich durch seine Vielfältigkeit aus und wird dadurch einzigartig. Obwohl Ideen meist klein beginnen, kann durch den Zusammenschluss unserer Business Center bereits ein Funke zu etwas Großem werden. Spaß, Kreativität und Begeisterung zeichnen unsere Arbeit aus, eben eine lustige Organisation für dolle Sachen. Seit neustem vermieten wir auch Handtücher für Veranstaltungen, Events und Gatronomie innerhalb von Berlin. Unser Handtuchservice umfasst das Ausliefern und reinigen verschiedener Handtucharten. Wer bei uns Handtücher mieten/ausleihen möchte ist an einer guten Adresse."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
